Fixes DF-1599 - rsvp/livestream gap

--- a/static/css/event.less
+++ b/static/css/event.less
@@ -135,6 +135,24 @@
     }
 }
 
+// The spacing for the RSVP/Livestream aside on the event details.
+// Spacing should follow a 1/2/1 ratio (15px/30px/15px).
+.event-status_rsvp p:first-child {
+    line-height: 1;
+    margin-bottom: unit(15px  / @base-font-size-px, em);
+}
+
+.event-status_rsvp p:last-child {
+    margin-bottom: unit(30px  / @base-font-size-px, em);
+}
+
+.event-status_livestream p:first-child {
+    line-height: 1;
+    // The margin is kept at 10px to accommodate the line-height
+    // of the text so that the gap appears to be 15px.
+    margin-bottom: unit(10px  / @base-font-size-px, em);
+}
+
 
 /* Event-Venue
    ========================================================================== */
